Link navbar to menus, fix text alignment in About and Location sections.

--- a/src/components/Location.css
+++ b/src/components/Location.css
@@ -26,6 +26,7 @@
 
 .location-info {
     margin-bottom: 1rem;
+    text-align: center;
 }
 
 .location-info a {
